# recognition

RoboModels/robocv/: cr.pcd
RoboModels/stopy/: cluster_stop.pcd  stop.pcd  stop_with_scene.pcd  stopy.ply
robot_recognition_project/: CMakeLists.txt  main.cpp
